--- a/public/assets/css/04-files-view.css
+++ b/public/assets/css/04-files-view.css
@@ -126,7 +126,7 @@
   }
 
   img {
-    max-width: 95vw;
+    max-width: 100%;
   }
 
   .preview-block-file-text {
